--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 
 .button {
   color: #ffffff;
-  background-color: #83B3D3;
+  background-color: #83b3d3;
 
   font-family: inherit;
   font-size: 16px;
@@ -72,7 +72,7 @@
 
 .main-header {
   color: #ffffff;
-  background-color: #83B3D3;
+  background-color: #83b3d3;
   background-image: url("../img/background/main-header.jpg");
   background-size: cover;
 }
@@ -146,7 +146,7 @@
 
 .pagination-link {
   color: #ffffff;
-  background-color: #83B3D3;
+  background-color: #83b3d3;
 
   font-size: 20px;
   font-weight: 700;
@@ -170,7 +170,7 @@
 
 .advantages-item-large {
   color: #ffffff;
-  background-color: #83B3D3;
+  background-color: #83b3d3;
 }
 
 .advantages-list-inner .advantages-item:nth-child(even) {
@@ -201,7 +201,7 @@
 
 .subscribe-primary {
   color: #ffffff;
-  background-color: #83B3D3;
+  background-color: #83b3d3;
   background-image: url("../img/background/subscribe.jpg");
   background-size: cover;
 }
